# PhysicalData-experiments

./: .gitignore  DATA.CSV  DATA_COORDS.CSV  DATA_COORDS_BOOST_Z.CSV  data.js  dataToCSV.js  index.html  package-lock.json  package.json  sonify.js  sound.js  v1 RAW MIDI.mid
dataviz/: csv_to_image.py  nassim.py  pyproject.toml
