[tool.poetry]
name = "dataviz"
version = "0.1.0"
description = ""
authors = ["PimTournaye <pim.tournaye@student.ehb.be>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
